move parallax to header

--- a/header-animation/package.json
+++ b/header-animation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "parallax-animation",
+  "name": "header-animation",
   "version": "1.0.0",
   "main": "index.js",
   "type": "module",
