--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vite": "^3.2.3"
   },
   "dependencies": {
-    "flowbite": "^1.5.4"
+    "@rollup/plugin-inject": "^5.0.2",
+    "flowbite": "^1.5.4",
+    "jquery": "^3.6.1"
   }
 }
